# SHARPIE

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  DEPENDENCIES_PIP.md  MANIFEST.in  README.md  apt_requirements.txt  create_app.sh  internship.md  pip_requirements.txt  pyproject.toml  requirements.txt  run_all_suites.sh
.github/workflows/: dependencies.yml  deploy-production.yml  generate-models.yml  test.yml
AMaze/: admin.py  forms.py  models.py  settings.py  task_description.md  urls.py  views.py  websocket.py
accounts/: urls.py
benchmark/: __init__.py  __main__.py  cli.py  config.py  metrics.py  orchestrator.py  participant_simulator.py  plotting.py  random_policy.py
custom_maze/: agent.py  forms.py  settings.py  urls.py  views.py  websocket.py
deployment/: DEPLOYMENT.md  GITHUB_SECRETS.md  SERVER_SETUP.md  nginx.conf  runner_supervisor.conf  use_cases.txt  webserver_supervisor.conf
docs/: Makefile  requirements.txt
docs/source/: api.rst  architecture.rst  benchmark.rst  conf.py  contributing.rst  crowdworker_integration.rst  customization.rst  data_model.rst  dependencies.rst  deployment.rst  development_intro.rst  engineering_principles.rst  faq.rst  glossary.rst  hello_world.rst  index.rst  installation.rst  installation_update.rst  overview.rst  quickstart.rst  release_checklist.rst  usage.rst
example/: forms.py  urls.py  views.py  websocket.py
minecraft/: forms.py  settings.py  task_description.md  urls.py  views.py  websocket.py
mountain/: admin.py  forms.py  models.py  settings.py  task_description.md  urls.py  views.py  websocket.py
mountain/migrations/: 0001_initial.py
panda/: agent.py  ex2.py  forms.py  settings.py  task_description.md  urls.py  websocket.py
runner/: admin.py  manage.py  models.py  websocket.py
scripts/: generate_dependencies.py  install_use_cases.sh
sharpie/: asgi.py  settings.py  task_content.py  urls.py  websocket.py
sharpie/benchmark/: cli.py  config.py  metrics.py  noop_environment.py  orchestrator.py  participant_simulator.py
sharpie/install/: cli.py  installer.py  utils.py  validator.py
sharpie/runner/: __init__.py  manage.py  noop_environment.py
sharpie/templates/: base.html  task_description.html
sharpie/webserver/: __init__.py  manage.py
sharpie_www/: create_app.sh  db.sqlite3
sharpie_www/AMaze/: agent.py  apps.py  forms.py  q_learning_env.py  urls.py  views.py  websocket.py
sharpie_www/example/: settings.py  websocket.py
sharpie_www/home/: views.py
sharpie_www/minecraft/: forms.py  setting.py  websocket.py
sharpie_www/mountain/: forms.py  q_table.py  urls.py  views.py  websocket.py
sharpie_www/mysite/: asgi.py  settings.py  urls.py  websocket.py
sharpie_www/spread/: agent.py  forms.py  urls.py  views.py  websocket.py
sharpie_www/tag/: forms.py  script.js  views.py  websocket.py
spread/: forms.py  settings.py  task_description.md  urls.py  websocket.py
tag/: forms.py  settings.py  task_description.md  urls.py  views.py  websocket.py
tamer_maze/: agent.py  forms.py  models.py  settings.py  task_description.md  urls.py  views.py  websocket.py
tamer_maze/migrations/: 0001_initial.py
webserver/: db.sqlite3  manage.py
webserver/accounts/: admin.py  decorators.py  forms.py  models.py  urls.py  views.py
webserver/data/: admin.py
webserver/experiment/: admin.py  environment_template.py  forms.py  models.py  policy_template.py  settings.py  urls.py  views.py  (+1 more)
(+232 files in other folders)
