[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SHARPIE"
version = "1.0.0"
authors = [{name = "Hybrid Intelligence"}]
description = "A modular framework for Reinforcement Learning and Human-AI interaction experiments."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["sharpie*",]

[project.scripts]
sharpie-web = "sharpie.webserver.manage:main"
sharpie-runner = "sharpie.runner.manage:main"